--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -2,6 +2,9 @@ body {
   display: block;
 }
 header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 130px;
   background-color: azure;
