--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -42,6 +42,13 @@ footer {
   align-items: center;
 }
 
+/*navigation*/
+.writer {
+  list-style: none;
+  line-height: 1.5em;
+  font-size: 1.3em;
+}
+
 
 
 
