--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -41,6 +41,13 @@ section h2{
   padding: 1em;
   text-indent: 2em;
 }
+form {
+  display: flex;
+    flex-direction: column;;
+    align-items: flex-start;
+}
+
+
 
 aside {
   flex: 1;
@@ -82,6 +89,8 @@ ul.text{
   font-weight: bold;
   font-size: 110%;
 }
+
+
 
 
 
