dosao sam do istog mesta gde sam sva izbrisao

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -62,8 +62,8 @@ img {
   margin-right:2px;
 }
 ul.writer {
-  margin: 1em 0;
-  padding-left: 1em;;
+  margin:1em 0;
+  padding-left: 0;;
   list-style: none;
 }
 ul.text {
