--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -63,7 +63,7 @@ img {
 }
 ul.writer {
   margin:1em 0;
-  padding-left: 0;;
+  padding-left: 0.5em;;
   list-style: none;
     font-size: 1.3em;
 }
